--- a/Урок 5. Объекты/Examples/00_Object_creation/002_Object().htm
+++ b/Урок 5. Объекты/Examples/00_Object_creation/002_Object().htm
@@ -39,9 +39,11 @@
 
         // Добавляем к объекту метод.
 
-        f = function () {
+        var f = function () {
           document.write("<p>x = " + this.x + "<p>y = " + this.y);
         };
+
+        //f();
 
         point1.func = f;
         point2.func = f;
