--- a/Урок 5. Объекты/Examples/00_Object_creation/006_Methods.htm
+++ b/Урок 5. Объекты/Examples/00_Object_creation/006_Methods.htm
@@ -22,7 +22,7 @@
             // Метод show() в блоке инициализации обьекта.
             show: function () {
 
-                document.write("<p>First name: " + human.firstName);
+                document.write("<p>First name: " + this.firstName);
                 document.write("<p>Second name: " + this.secondName);
                 document.write("<p>Age: " + this.age + " years old<br/>");
                 document.write(this.occupation + "<hr/>");
