--- a/Урок 5. Объекты/Examples/00_Object_creation/009_Prop_exist.htm
+++ b/Урок 5. Объекты/Examples/00_Object_creation/009_Prop_exist.htm
@@ -33,11 +33,11 @@
             document.write(house["secondFloor"]);
         }
 
-        document.write(house.secondFloor);
-        document.write(house.firstFloor);
-        document.write(house.basement);
+        //document.write(house.secondFloor);
+        //document.write(house.firstFloor);
+        //document.write(house.basement);
 
-        document.write(house.address);
+        //document.write(house.address);
 
     </script>
 
