--- a/Урок 5. Объекты/Examples/00_Object_creation/010_Delete_prop.htm
+++ b/Урок 5. Объекты/Examples/00_Object_creation/010_Delete_prop.htm
@@ -32,7 +32,7 @@
         }
 
         for (var element in house) {
-            document.write(house[roof]);
+            document.write(house[element]);
         }
 
         document.writeln(house.f());
