--- a/Урок 5. Объекты/Examples/01_BasicConstructors/004_String().htm
+++ b/Урок 5. Объекты/Examples/01_BasicConstructors/004_String().htm
@@ -12,7 +12,7 @@
 
             function newLine(str) {
                 document.write(str + "<br />");
-                document.write(typeof (str));
+                document.write(typeof (str) + "<br/>");
                 document.write("==========================================================<br />");
             }
 
