--- a/Урок 5. Объекты/Examples/02_CustomConstructors/001_User_Constructor.htm
+++ b/Урок 5. Объекты/Examples/02_CustomConstructors/001_User_Constructor.htm
@@ -26,8 +26,8 @@
         // Вывод координат созданых точек
         document.write("Координаты нашего треугольника:<br /><br />");
         document.write("Координаты первой точки: " + leftTop.x + " , " + leftTop.y + "<br />");
-        document.write("Координаты первой точки: " + topPoint.x + " , " + topPoint.y + "<br />");
-        document.write("Координаты первой точки: " + rightBottom.x + " , " + rightBottom.y + "<br />");
+        document.write("Координаты второй точки: " + topPoint.x + " , " + topPoint.y + "<br />");
+        document.write("Координаты третей точки: " + rightBottom.x + " , " + rightBottom.y + "<br />");
 
     </script>
 
