--- a/Урок 5. Объекты/Examples/00_Object_creation/007_Methods_outside.htm
+++ b/Урок 5. Объекты/Examples/00_Object_creation/007_Methods_outside.htm
@@ -11,6 +11,9 @@
         };
 
         builder.createFirstFloor = function () {
+            
+
+            builder.createRoof();
             document.write("<img src='Images/FirstFloor.gif'/><br/>");
         };
 
