--- a/Урок 5. Объекты/Examples/01_BasicConstructors/001_Object().htm
+++ b/Урок 5. Объекты/Examples/01_BasicConstructors/001_Object().htm
@@ -11,7 +11,7 @@
     <script type="text/javascript">
 
         // пустой объект созданный конструктором Object
-        var point = Object();
+        var point = new Object();
 
         point.x = 22;
 
