--- a/Урок 1. Первое знакомство JavaScript/Examples/003_Simple_Methods/004_Confirm.htm
+++ b/Урок 1. Первое знакомство JavaScript/Examples/003_Simple_Methods/004_Confirm.htm
@@ -14,7 +14,7 @@
 
         var conf = confirm("Вы уверены?");
 
-        //alert(typeof (conf));
+        alert(typeof (conf));
 
         document.write(conf);
 
