--- a/Урок 1. Первое знакомство JavaScript/Examples/004_Operators/001_Arithmetic/002_Reminder.htm
+++ b/Урок 1. Первое знакомство JavaScript/Examples/004_Operators/001_Arithmetic/002_Reminder.htm
@@ -11,8 +11,8 @@
 
     <script type="text/javascript">
 
-        var a = prompt("Insert a", "9");
-        var b = prompt("Insert b", "5");
+        var a = +prompt("Insert a", "9");
+        var b = +prompt("Insert b", "5");
 
         var result;
 
