--- a/Урок 2. Логические конструкции/Examples/001_Conditional_statements/001_If.htm
+++ b/Урок 2. Логические конструкции/Examples/001_Conditional_statements/001_If.htm
@@ -1,7 +1,6 @@
 ﻿<!--
 
-        if (выражение) 
-        {
+        if (выражение) {
             Выполнится, если  выражение будет истинно (true)
         } 
               
