--- a/Урок 2. Логические конструкции/Examples/003_Operators/003_Labels.htm
+++ b/Урок 2. Логические конструкции/Examples/003_Operators/003_Labels.htm
@@ -10,7 +10,7 @@
 
     <script type="text/javascript">
 
-        label:
+        
 
             for (var j = 0; j < 5; j++)
             {
@@ -23,9 +23,9 @@
 
                     if (input == null)              
                       {
-                        break ;
+                        //break label;
 
-                       //continue label;
+                       continue label;
 
                     }
 
@@ -33,6 +33,9 @@
             }
             document.write("<br/>");
         }
+        
+        label:
+
         document.write('готово!');
 
         //var a = +prompt("enter", "hello");
