--- a/Урок 3. Массивы/Examples/001_Array_simple/001_Array_simple.htm
+++ b/Урок 3. Массивы/Examples/001_Array_simple/001_Array_simple.htm
@@ -31,14 +31,14 @@
 
         document.write("<hr />");
 
-        document.write(c);
+        document.write(c.toString());
 
         // Одномерный массив из трех элементов разных типов.
         var d = ["Hello", 34, true];
 
         document.write("<hr />");
 
-        document.write(d);
+        document.write(typeof (d));
 
     </script>
 
