--- a/Урок 3. Массивы/Examples/001_Array_simple/003_Array_contain.htm
+++ b/Урок 3. Массивы/Examples/001_Array_simple/003_Array_contain.htm
@@ -18,16 +18,16 @@
         arr[1] = 5;
         arr[2] = 12;
         arr[3] = 8;
-        arr[4] = 23;
+        arr[4] = [1,2,34];
 
         document.write("Содержимое массива" + arr);
 
-        arr[4] = "Четыре";         // Изменяем значение элемента массива по индексу 4.
-        arr[10] = "Десять";        // Происходит изменение размера массива.
+        //arr[4] = "Четыре";         // Изменяем значение элемента массива по индексу 4.
+        //arr[10] = "Десять";        // Происходит изменение размера массива.
 
         document.write("<hr />");
 
-        document.write(arr);
+        document.write(arr[4][10]);
 
     </script>
 
