--- a/Урок 3. Массивы/Examples/002_Array methods/001_Join.htm
+++ b/Урок 3. Массивы/Examples/002_Array methods/001_Join.htm
@@ -17,7 +17,7 @@
 
         document.write("<p><b>Значение которое возвращает метод - join(' | ');</b>");
 
-        var res = arr.join(" * ");
+        var res = arr.join(" | ");
         document.write("<p>" + res);
 
         document.write("<p><b>Значение которое возвращает метод - join(< br/ >);</b>");
