--- a/Урок 4. Функции/Examples/001_Function_Simple/004_Function_args.htm
+++ b/Урок 4. Функции/Examples/001_Function_Simple/004_Function_args.htm
@@ -34,10 +34,10 @@
       
         // Вызов функций.
 
-        Sum1();
+        //Sum1();
 
         Sum2(); // Не передаем параметров при вызове.
-        Sum2(c, d);
+        //Sum2(c, d);
 
     </script>
 
