--- a/Урок 4. Функции/Examples/001_Function_Simple/006_Return.htm
+++ b/Урок 4. Функции/Examples/001_Function_Simple/006_Return.htm
@@ -14,7 +14,8 @@
     <script type="text/javascript">
 
         function Sum(a, b) {
-          //return a + b;
+
+            return a + b;
 
           alert("Hello");
         }
