--- a/Урок 6. Работа с документами/Examples/02_JS_Module/BadPractice/001_BadPage.html
+++ b/Урок 6. Работа с документами/Examples/02_JS_Module/BadPractice/001_BadPage.html
@@ -4,6 +4,10 @@
     <title>Зачем нужны пространства имен и модули</title>
     <script src="BadModule1.js"></script>
     <script src="BadModule2.js"></script>
+
+    <!--var name = "1";       
+    var name = "2";-->
+
     <script>
         // из-за глобальной переменной name метод startModule1() и startModule2() будут выводить одинаковые значения.
         startModule1();
