--- a/Урок 6. Работа с документами/Examples/04_DOM/003_DOM_Attributes.html
+++ b/Урок 6. Работа с документами/Examples/04_DOM/003_DOM_Attributes.html
@@ -9,7 +9,7 @@
             var a3 = document.getElementById("a3");
 
             // установка атрибута
-            a1.setAttribute("href", "http://edu.cbsystematics.com");
+            a1.setAttribute("href", "http://www.xxi.kiev.ua/");
 
             // удаление атрибута
             a2.removeAttribute("href");
@@ -21,7 +21,7 @@
 </head>
 <body>
     <a id="a1" >Text a1</a>
-    <a id="a2" href="http://edu.cbsystematics.com">Text a2</a>
-    <a id="a3" href="http://edu.cbsystematics.com">Text a3</a>
+    <a id="a2" href="http://www.xxi.kiev.ua/">Text a2</a>
+    <a id="a3" href="http://www.xxi.kiev.ua/">Text a3</a>
 </body>
 </html>
