--- a/Урок 7 BOM/Examples/002_Location/001_Location.htm
+++ b/Урок 7 BOM/Examples/002_Location/001_Location.htm
@@ -12,7 +12,7 @@
         
         // location - http://www.xxi.kiev.ua/about.html?id=10
         // protocol - http:
-        // host - http://www.xxi.kiev.ua
+        // host -     www.xxi.kiev.ua/
         // pathname - /about.html
         // search - ?id=10
     </script>
