--- a/Урок 7 BOM/Examples/001_Windows/01_Timeout.htm
+++ b/Урок 7 BOM/Examples/001_Windows/01_Timeout.htm
@@ -8,16 +8,16 @@
 
             // setTimeout - планирует один запуск указанной функции через определенное количество миллисекунд
             // функция showMessage будет запущена через 5 секунд
-            setTimeout(showMessage, 5000)
+            //setTimeout(showMessage, 5000)
 
-            function showMessage() {
-                alert("Hello world");
-            }
+            //function showMessage() {
+            //    alert("Hello world");
+            //}
 
              //второй вариант запуска
-            //setTimeout(function () {
-            //    alert("Hello world");
-            //}, 5000);
+            setTimeout(function () {
+                alert("Hello world");
+            }, 5000);
         }
     </script>
 </head>
