--- a/Урок 7 BOM/Examples/001_Windows/02_TimeoutObject.html
+++ b/Урок 7 BOM/Examples/001_Windows/02_TimeoutObject.html
@@ -6,7 +6,7 @@
         var timer;
 
         window.onload = function () {
-            timer = setTimeout(showMessage, 5000);
+          var timer = setTimeout(showMessage, 5000);
         }
 
         function showMessage() {
