--- a/Урок 8. DHTML/Examples/03_DHTML/006_ColorAnimationHSL.htm
+++ b/Урок 8. DHTML/Examples/03_DHTML/006_ColorAnimationHSL.htm
@@ -20,9 +20,9 @@
         var color = 0;
 
         setInterval(function () {
-            color = color + 1 % 360;
+            color = (color + 1) % 360;
             e.style.backgroundColor = "hsl(" + color + ", 100%, 50%)"; // hsl(0, 100%, 50%)
-        }, 5);
+        }, 50);
     </script>
 </body>
 </html>
