--- a/Урок 9. Events/03_Keyboard/003_CharCode.html
+++ b/Урок 9. Events/03_Keyboard/003_CharCode.html
@@ -10,7 +10,7 @@
                 print("alt = " + e.altKey);
                 print("ctrl = " + e.ctrlKey);
                 print("shift = " + e.shiftKey);
-                print("charCode = " + String.fromCharCode(90)); // код символа (передается при событии keypress)
+                print("charCode = " + String.fromCharCode(e.charCode)); // код символа (передается при событии keypress)
                 print("keyCode = " + e.keyCode); // код клавиши
             }
 
