--- a/Урок 10. Формы/Examples/01_Form/001_FormObject.html
+++ b/Урок 10. Формы/Examples/01_Form/001_FormObject.html
@@ -8,7 +8,7 @@
             
             f.elements[0].value = "text"; // изменение первого по счету поля ввода в форме.
             f.elements[1].value = "text";
-            f.elements[2].name = "text";
+            f.elements[2].value = "text";
         }
     </script>
 </head>
@@ -17,9 +17,9 @@
         Имя <input type="text" value=" " /><br />
         Фамилия<input type="text" value=" " /><br />
 
-        <p name=""></p>
+        <!--<p name=""></p>-->
 
-        Возраст<textarea type="text" value=" " /><br />
+        Возраст<textarea type="text" value=""> </textarea>
         <input type="button" value="Регистрация" />
     </form>
 </body>
