--- a/Урок 10. Формы/Examples/03_Validation/003_FormValidation.htm
+++ b/Урок 10. Формы/Examples/03_Validation/003_FormValidation.htm
@@ -17,63 +17,19 @@
     <form>
         Name:
         <input type="text" name="userName"
-            data-val="\S"
-            data-val-msg="Введите значение"
-            data-val-msg-id="userNameMsg" />
-
-        <span id="userNameMsg"></span>
-        <br />
-
-        Email:
-        <input type="text" name="email"
-            data-val="\b[a-z0-9._]+@[a-z0-9.-]+\.[a-z]{2,4}\b"
-            data-val-msg="Вы ввели не правильный email"
-            data-val-msg-id="emailMsg" />
-        <span id="emailMsg"></span>
-        <br />
-
-        Zip:
-        <input type="text" name="zip"
-            data-val="^\d{5}$"
-            data-val-msg="Почтовый индекс введен не правильно"
-            data-val-msg-id="zipMsg" />
-        <span id="zipMsg"></span>
-        <br />
-
-        <input type="submit" />
-    </form>
-
-
-    <form>
-        Name:
-        <input type="text" name="userName"
                data-val="\S"
-               data-val-msg="Введите значение"
+               data-val-msg="Введите значение"  
                data-val-msg-id="userNameMsg" />
+              <!--dataset.valMsgId-->
+
 
         <span id="userNameMsg"></span>
-        <br />
 
-        Email:
-        <input type="text" name="email"
-               data-val="\b[a-z0-9._]+@[a-z0-9.-]+\.[a-z]{2,4}\b"
-               data-val-msg="Вы ввели не правильный email"
-               data-val-msg-id="emailM" />
-        <span id="emailM"></span>
-        <br />
-
-        Zip:
-        <input type="text" name="zip"
-               data-val="^\d{5}$"
-               data-val-msg="Почтовый индекс введен не правильно"
-               data-val-msg-id="zipMsg" />
-        <span id="zipMsg"></span>
         <br />
 
         <input type="submit" />
     </form>
-
-
+    
 </body>
 </html>
 
