--- a/Урок 11. Работа со строками. Регулярные выражения/Examples/02_RegularExpression/004_StringMethods_match.htm
+++ b/Урок 11. Работа со строками. Регулярные выражения/Examples/02_RegularExpression/004_StringMethods_match.htm
@@ -13,7 +13,7 @@
         var text2 = "Текст 123 для тестирования 555 примера";
         var res2 = text2.match(/\d\d\d/g);
 
-        document.write("<br />res2[0] = " + res2);
+        document.write("<br />res2 = " + res2);
     </script>
 </head>
 <body>
