--- a/Урок 11. Работа со строками. Регулярные выражения/Examples/02_RegularExpression/002_StringMethods_search.htm
+++ b/Урок 11. Работа со строками. Регулярные выражения/Examples/02_RegularExpression/002_StringMethods_search.htm
@@ -7,7 +7,7 @@
         // search() - возвращает индекс первого найденного символа подстроки по шаблону или -1 если подстрока не найдена
         var text = "Строка 123 для тестирования 456 примера.";
         var pattern = /\d\d\d/;
-        var firstIndex = text.search(pattern);
+        var firstIndex = text.search(pattern)
         document.write("Подстрока найдена по индексу " + firstIndex);
     </script>
 </head>
