--- a/Урок 12. Cookies/Examples/02_WebStorage/003_Storage_Example.html
+++ b/Урок 12. Cookies/Examples/02_WebStorage/003_Storage_Example.html
@@ -10,12 +10,11 @@
                 document.body.style.backgroundColor = window.localStorage.pageColor;
             }
 
-            document.getElementById("saveButton").addEventListener("change", function () {
+            //document.getElementById("saveButton").addEventListener("change", function () {
 
 
                 document.getElementById("saveButton").addEventListener("click", function () {
-
-                    f90();
+                                      
 
                 var selectedColor = getCheckedRadioId("color")
                 window.localStorage.pageColor = selectedColor;
