--- a/Урок 12. Cookies/Examples/01_Cookies/004_Encode_Decode.html
+++ b/Урок 12. Cookies/Examples/01_Cookies/004_Encode_Decode.html
@@ -7,7 +7,8 @@
 
         window.onload = function () {
             // name=a;b;c; max-age=1000;
-            function $ (id) {
+            function $(id)
+            {
                 return document.getElementById(id);
             }
 
