--- a/Урок 13. Работа с графикой/Examples/01_Images/001_ImageFetching.html
+++ b/Урок 13. Работа с графикой/Examples/01_Images/001_ImageFetching.html
@@ -17,6 +17,6 @@
 </head>
 
 <body>
-    <img id="logoImg" name="logo" src="images/logo.png" alt="CyberBionic Systematics" />
+    <img id="logoImg" name="logo" src="images/logo.png">
 </body>
 </html>
