--- a/Урок 13. Работа с графикой/Examples/01_Images/005_Chart.html
+++ b/Урок 13. Работа с графикой/Examples/01_Images/005_Chart.html
@@ -17,6 +17,10 @@
     </script>
 </head>
 <body>
-    <div id="chartContainer"></div>
+    <div id="chartContainer">
+
+
+
+    </div>
 </body>
 </html>
