--- a/Урок 13. Работа с графикой/Examples/02_SVG/003_Gradients.html
+++ b/Урок 13. Работа с графикой/Examples/02_SVG/003_Gradients.html
@@ -1,9 +1,15 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
+    <!--http://svg-edit.googlecode.com/svn/branches/stable/editor/svg-editor.html?storagePrompt=false-->
+
     <title>Градиент</title>
 </head>
 <body>
+
+    
+
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
         <defs>
             <linearGradient id="grad1" 
@@ -33,165 +39,86 @@
 
 
     <?xml version="1.0" encoding="UTF-8" standalone="no" ?>
-
     <!-- Created with Inkscape (http://www.inkscape.org/) -->
-
-    <svg id="svg2" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="1052.4" width="744.09" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/">
-
+    <svg          width="400"
+         height="400"
+         id="svg2"
+         version="1.1"
+         inkscape:version="0.48.2 r9819"
+         sodipodi:docname="drawing.svg">
+        <defs id="defs4" />
+        <sodipodi:namedview id="base"
+                            pagecolor="#ffffff"
+                            bordercolor="#666666"
+                            borderopacity="1.0"
+                            inkscape:pageopacity="0.0"
+                            inkscape:pageshadow="2"
+                            inkscape:zoom="0.35"
+                            inkscape:cx="375"
+                            inkscape:cy="520"
+                            inkscape:document-units="px"
+                            inkscape:current-layer="layer1"
+                            showgrid="false"
+                            inkscape:window-width="1366"
+                            inkscape:window-height="705"
+                            inkscape:window-x="-8"
+                            inkscape:window-y="-8"
+                            inkscape:window-maximized="1" />
         <metadata id="metadata7">
-
             <rdf:RDF>
-
                 <cc:Work rdf:about="">
-
                     <dc:format>image/svg+xml</dc:format>
-
                     <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-
-                    <dc:title />
-
+                    <dc:title></dc:title>
                 </cc:Work>
-
             </rdf:RDF>
-
         </metadata>
-
-        <g id="layer1">
-
-            <path id="path2985" fill="#00F" d="m148.57,289.51-54.027-53.737-74.896,14.041,34.412-67.988-36.498-66.891,75.294,11.718,52.339-55.382,12.122,75.23,68.845,32.663-67.802,34.777z" />
-
-            <path id="path2987" fill="#00F" d="m311.43,438.08-50.712-38.447-60.421,19.979,20.894-60.111-37.672-51.29,63.625,1.2964,37.138-51.678,18.428,60.912,60.625,19.351-52.236,36.349z" />
-
-            <path id="path2989" fill="#00F" d="m448.57,535.22-41.475-19.731-39.767,22.98,5.949-45.543-34.144-30.719,45.152-8.4156,18.665-41.966,21.956,40.341,45.68,4.783-31.582,33.348z" />
-
-            <path id="path2991" fill="#00F" d="m517.14,569.51-19.401-22.162-29.256,3.418,15.082-25.3-12.291-26.767,28.722,6.526,21.659-19.961,2.6691,29.333,25.677,14.431-27.073,11.603z" />
-
-            <path id="path2993" fill="#00F" d="m600,589.51-24.593-2.6732-16.144,18.744-5.0574-24.216-22.815-9.5621,21.468-12.293,2.0437-24.654,18.325,16.618,24.079-5.6747-10.142,22.564z" />
-
-            <path id="path2995" fill="#00F" d="m674.29,598.08-31.399,0.68556-17.236,26.254-10.355-29.65-30.296-8.2792,24.999-19.01-1.4879-31.371,25.805,17.901,29.376-11.109-9.0508,30.074z" />
-
-            <path id="path2997" stroke-linejoin="miter" d="m74.286,649.51c-1.2893,4.2976-6.4291,0.38235-7.1429-2.1429-1.9342-6.8432,5.366-12.042,11.429-12.143,10.845-0.18125,17.972,10.674,17.143,20.714-1.2162,14.734-16.033,24.02-30,22.143-18.615-2.5024-30.116-21.408-27.143-39.286,3.7417-22.497,26.79-36.236,48.571-32.143,26.38,4.9572,42.369,32.176,37.143,57.857-6.159,30.265-37.563,48.511-67.143,42.143-34.155-7.35-54.662-42.95-47.147-76.43,8.539-38.04,48.343-60.81,85.714-52.14,41.925,9.7228,66.964,53.734,57.143,95-10.903,45.813-59.125,73.12-104.29,62.143" transform="translate(300,-482.85714)" stroke="#000" stroke-linecap="butt" stroke-width="1px" fill="none" />
-
-            <use id="use2999" xlink:href="#path2997" transform="translate(-116.06194,599.4611)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3001" xlink:href="#path2997" transform="translate(-179.61178,620.46779)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3003" xlink:href="#path2997" transform="translate(-160.81376,618.11503)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3005" xlink:href="#path2997" transform="translate(-89.04366,632.97856)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3007" xlink:href="#path2997" transform="translate(-168.37848,617.07901)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3009" xlink:href="#path2997" transform="translate(-77.648975,535.04759)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3011" xlink:href="#path2997" transform="translate(-183.77695,639.20466)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3013" xlink:href="#path2997" transform="translate(-67.238283,622.61945)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3015" xlink:href="#path2997" transform="translate(-135.73647,598.13834)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3017" xlink:href="#path2997" transform="translate(-100.44993,697.52011)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3019" xlink:href="#path2997" transform="translate(-146.40858,588.67977)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3021" xlink:href="#path2997" transform="translate(-85.587082,619.3899)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3023" xlink:href="#path2997" transform="translate(-197.36372,571.74011)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3025" xlink:href="#path2997" transform="translate(-181.68267,591.55134)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3027" xlink:href="#path2997" transform="translate(-148.64327,570.19633)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3029" xlink:href="#path2997" transform="translate(-183.62643,514.15517)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3031" xlink:href="#path2997" transform="translate(-137.7964,491.03439)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3033" xlink:href="#path2997" transform="translate(-232.99845,571.64703)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3035" xlink:href="#path2997" transform="translate(-183.43869,489.97357)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3037" xlink:href="#path2997" transform="translate(-162.29315,482.56914)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3039" xlink:href="#path2997" transform="translate(-116.21448,535.38465)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3041" xlink:href="#path2997" transform="translate(-80.79621,642.28701)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3043" xlink:href="#path2997" transform="translate(-194.1409,646.76316)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3045" xlink:href="#path2997" transform="translate(-177.08432,623.92715)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3047" xlink:href="#path2997" transform="translate(-158.89015,638.83739)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3049" xlink:href="#path2997" transform="translate(-156.79722,715.2152)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3051" xlink:href="#path2997" transform="translate(-148.90577,595.90715)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3053" xlink:href="#path2997" transform="translate(-258.36277,627.35127)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3055" xlink:href="#path2997" transform="translate(-109.17237,711.9246)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3057" xlink:href="#path2997" transform="translate(-119.97113,602.16863)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3059" xlink:href="#path2997" transform="translate(-177.44097,559.9343)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3061" xlink:href="#path2997" transform="translate(-196.04925,473.08461)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3063" xlink:href="#path2997" transform="translate(-197.62545,568.84234)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3065" xlink:href="#path2997" transform="translate(-163.23789,555.21544)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3067" xlink:href="#path2997" transform="translate(-146.0488,587.84799)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3069" xlink:href="#path2997" transform="translate(17.244362,605.38458)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3071" xlink:href="#path2997" transform="translate(48.482973,548.79552)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3073" xlink:href="#path2997" transform="translate(163.97789,588.37475)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3075" xlink:href="#path2997" transform="translate(170.4264,670.22678)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3077" xlink:href="#path2997" transform="translate(123.09306,630.12471)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3079" xlink:href="#path2997" transform="translate(132.95417,606.20237)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3081" xlink:href="#path2997" transform="translate(-23.289891,691.59706)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3083" xlink:href="#path2997" transform="translate(53.897103,642.06238)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3085" xlink:href="#path2997" transform="translate(161.08995,621.39458)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3087" xlink:href="#path2997" transform="translate(76.730407,579.47945)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3089" xlink:href="#path2997" transform="translate(56.278202,543.71411)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3091" xlink:href="#path2997" transform="translate(154.86411,679.13069)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3093" xlink:href="#path2997" transform="translate(43.672544,597.67725)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3095" xlink:href="#path2997" transform="translate(92.316549,584.2876)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3097" xlink:href="#path2997" transform="translate(78.178709,663.09795)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3099" xlink:href="#path2997" transform="translate(114.71075,650.15781)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3101" xlink:href="#path2997" transform="translate(-1.4130133,665.6717)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3103" xlink:href="#path2997" transform="translate(123.72275,685.90161)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3105" xlink:href="#path2997" transform="translate(121.0287,771.31266)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3107" xlink:href="#path2997" transform="translate(79.445961,594.3892)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3109" xlink:href="#path2997" transform="translate(123.00549,706.47353)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3111" xlink:href="#path2997" transform="translate(-24.997737,712.83295)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <use id="use3113" xlink:href="#path2997" transform="translate(-214.7986,478.96168)" height="1052.3622" width="744.09448" y="0" x="0" />
-
-            <path id="path3115" d="m702.86,333.79a78.571,78.571,0,1,1,-157.14,0,78.571,78.571,0,1,1,157.14,0z" fill="#00F" />
-
+        <g inkscape:label="Layer 1"
+           inkscape:groupmode="layer"
+           id="layer1">
+            <path sodipodi:type="star"
+                  style="fill:#0000ff"
+                  id="path2985"
+                  sodipodi:sides="5"
+                  sodipodi:cx="268.57143"
+                  sodipodi:cy="318.07647"
+                  sodipodi:r1="264.11191"
+                  sodipodi:r2="132.05595"
+                  sodipodi:arg1="1.4732805"
+                  sodipodi:arg2="2.1015991"
+                  inkscape:flatsided="false"
+                  inkscape:rounded="0"
+                  inkscape:randomized="0"
+                  d="M 294.28573,580.93362 201.72131,431.96166 26.525601,423.75954 139.60237,289.69068 93.264593,120.53507 255.71431,186.64791 402.27169,90.306104 389.59437,265.23495 526.50959,374.84806 356.22486,416.84719 z"
+                  inkscape:transform-center-x="-7.9461513"
+                  inkscape:transform-center-y="17.543385" />
+            <path sodipodi:type="spiral"
+                  style="fill:none;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                  id="path2987"
+                  sodipodi:cx="188.57143"
+                  sodipodi:cy="703.79077"
+                  sodipodi:expansion="1"
+                  sodipodi:revolution="3"
+                  sodipodi:radius="137.41045"
+                  sodipodi:argument="-17.216341"
+                  sodipodi:t0="0"
+                  d="m 188.57143,703.79077 c -0.42976,6.87613 -9.48091,2.81314 -11.42857,-0.71428 -5.27806,-9.55908 3.82639,-19.87777 12.85713,-22.14286 16.15389,-4.05172 30.59614,9.69675 32.85715,24.99999 3.31813,22.45812 -15.60258,41.50996 -37.14285,43.57144 -28.70978,2.74761 -52.49973,-21.51522 -54.28572,-49.2857 -2.24748,-34.94632 27.42968,-63.52731 61.42855,-65.00001 41.1772,-1.78365 74.57649,33.34488 75.7143,73.5714 1.34088,47.40557 -39.26051,85.63919 -85.71426,86.42859 -53.63269,0.91139 -96.710917,-45.17643 -97.142873,-97.85712 -0.490816,-59.85914 51.092553,-107.78897 109.999973,-107.85716 66.08522,-0.0765 118.87162,57.00884 118.57145,122.14282 -0.33325,72.31107 -62.92526,129.95774 -134.28568,129.28574" />
+            <path sodipodi:type="spiral"
+                  style="fill:none;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                  id="path2989"
+                  sodipodi:cx="434.28571"
+                  sodipodi:cy="723.79077"
+                  sodipodi:expansion="1"
+                  sodipodi:revolution="3"
+                  sodipodi:radius="117.80302"
+                  sodipodi:argument="-17.677282"
+                  sodipodi:t0="0"
+                  d="m 434.28571,723.79077 c 2.29204,5.4436 -6.20705,5.77531 -9.04762,3.80953 -7.69777,-5.32715 -4.64182,-16.72192 1.42856,-21.90476 10.85849,-9.2709 27.19035,-4.22152 34.76191,6.66665 11.11157,15.97883 3.84851,37.82239 -11.90475,47.61905 -20.99662,13.05742 -48.51533,3.49925 -60.47619,-17.14284 -15.05153,-25.97595 -3.16299,-59.23799 22.38093,-73.33334 30.9371,-17.07135 69.97753,-2.83439 86.19048,27.61903 19.1064,35.88829 2.51064,80.72762 -32.85711,99.04762 -40.83347,21.15118 -91.48475,2.19011 -111.90477,-38.0952 -23.20254,-45.77473 -1.87182,-102.2468 43.33329,-124.76192 50.71331,-25.25855 113.01246,-1.55516 137.61906,48.57139 27.31799,55.64997 1.23972,123.78082 -53.80948,150.47621" />
+            <path style="fill:#800000"
+                  d="m 248.38959,503.82853 c -24.7037,-39.77792 -45.09731,-72.54838 -45.31913,-72.82323 -0.22182,-0.27489 -37.03556,-2.07766 -81.80831,-4.00615 -44.772756,-1.92851 -83.112619,-4.3824 -85.1997,-5.45305 -2.646604,-1.35772 12.695252,-21.48963 50.708256,-66.54055 l 54.502954,-64.59387 -22.50935,-82.31046 c -12.38014,-45.27076 -22.156747,-82.70971 -21.725801,-83.19768 0.430945,-0.48797 35.637651,13.33346 78.237131,30.71429 42.59948,17.38082 78.65963,31.6015 80.13367,31.6015 1.47405,0 34.57782,-21.0316 73.56395,-46.73687 38.98614,-25.70528 71.08485,-46.598138 71.33051,-46.428575 0.24563,0.169564 -1.89794,31.808295 -4.76348,70.308295 -2.86558,38.5 -5.63798,77.25286 -6.16092,86.11747 l -0.9508,16.11746 67.06763,53.72301 67.06763,53.72301 -82.36606,20.60082 c -45.30134,11.33046 -83.40686,21.68795 -84.67894,23.01666 -1.27209,1.32872 -15.3916,37.13014 -31.37674,79.55872 -15.98514,42.42857 -29.46277,77.54557 -29.95028,78.03777 -0.48752,0.4922 -21.09852,-31.65066 -45.80222,-71.42857 l 0,0 z"
+                  id="path2993"
+                  inkscape:connector-curvature="0" />
         </g>
-
     </svg>
 
 
