--- a/Урок 15 JQuery/Examples/002_Basic_Selectors/008_SelectorClasses.htm
+++ b/Урок 15 JQuery/Examples/002_Basic_Selectors/008_SelectorClasses.htm
@@ -11,7 +11,7 @@
 
             // Выбор всех элементов "p" с именем класса "red".
 
-            $("p.red").css("color", "red");
+            $(".red").css("color", "red");
 
         });
 
