--- a/Урок 15 JQuery/Examples/003_Filters/006_Has.htm
+++ b/Урок 15 JQuery/Examples/003_Filters/006_Has.htm
@@ -8,9 +8,9 @@
         // :has - фильтр выбирает все элементы, которые содержат указанный в параметрах элемент
 
         $(function () {
-           // $("div:has(p)").css("background-color", "red");
-           //$("div:has(img)").css("background-color", "red");
-            //$("div:has(ol)").css("background-color", "red");
+              $("div:has(p)").css("background-color", "red");
+           // $("div:has(img)").css("background-color", "red");
+           // $("div:has(ol)").css("background-color", "red");
         });
 
     </script>
