--- a/Урок 15 JQuery/Examples/003_Filters/004_Disabled.html
+++ b/Урок 15 JQuery/Examples/003_Filters/004_Disabled.html
@@ -11,13 +11,14 @@
 
                 $("input:disabled").val("disabled");
 
+                alert($("input:disabled").val());
             });
 
         </script>
     </head>
     <body>
         <form>
-            <input type="text" disabled="disabled" />
+            <input type="text" disabled="disabled" value=""/>
             <input type="text" />
         </form>
     </body>
