--- a/Урок 15 JQuery/Examples/002_Basic_Selectors/011_SelectorAttributes1.html
+++ b/Урок 15 JQuery/Examples/002_Basic_Selectors/011_SelectorAttributes1.html
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body>
-    <a href="http://dinamicka.com/ ">CyberBionic Systematics</a><br />
-    <a href="http://dinamicka.com/video/ru/ " target="_blank">Video CyberBionic Systematics</a>
+    <a href="http://dinamicka.com/ ">Dinamicka Development</a><br />
+    <a href="http://dinamicka.com/video/ru/ " target="_blank">Dinamicka Development</a>
 </body>
 </html>
